[package]
name = "red4lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
fnv = "1.0"
sha1 = "0.10"
strum = "0.25"
strum_macros = "0.25"
walkdir = "2.4"

[build-dependencies.cmake]
version = "0.1"

[build-dependencies.zip]
version = "0.6"
