[package]
name = "red4lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
fnv = "1.0"
sha1 = "0.10"
crc64 = "2.0"
strum = "0.26"
strum_macros = "0.26"
walkdir = "2.4"

[build-dependencies.cmake]
version = "0.1"

[build-dependencies.zip]
version = "2.2"
